Fix header button position issues on IE Fix hamburger menu icon overflow issue on IE Fix issue on IE where tag-holder div did not automatically set it's height and broke the tag overflow script.

--- a/app/assets/stylesheets/app/menu.sass
+++ b/app/assets/stylesheets/app/menu.sass
@@ -46,11 +46,14 @@
         align-items: center
         justify-content: space-between
         list-style: none
+        overflow: visible
         li
           &.close-hamburger-menu
+            &, & div
+              overflow: visible
             a
-              width: 35px
-              height: 35px
+              width: 42px
+              height: 26px
               display: block
               background: image-url('/assets/app/icons/menu-red.svg') no-repeat center center
               background-size: contain
